# kodkod-rs

./: ALLOC_EXPERIMENT.md  ARENA_IMPLEMENTATION.md  AUDIT.md  AUDIT_RESPONSE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_ANALYSIS.md  INTEGER_CONSTRAINTS_COMPLETE.md  INTEGER_CONSTRAINTS_IMPLEMENTATION.md  INTEGER_CONSTRAINTS_ROADMAP.md  PERFORMANCE_ANALYSIS.md  PLAN.md  README.md  SIMPLIFICATION_PROGRESS.md  TEST_AUDIT_REPORT.md  TODO.md  WORK_STATUS.md
.claude/: settings.local.json
benches/: solver_benchmarks.rs  solver_comparison.rs
examples/: alloy_abstract_world_definitions.rs  alloy_bigconfig.rs  alloy_ceilings_and_floors.rs  alloy_diff_eg.rs  alloy_dijkstra.rs  alloy_dna_cuts.rs  alloy_file_system.rs  alloy_group_scheduling.rs  alloy_handshake.rs  alloy_hotel.rs  alloy_lists.rs  alloy_netconfig.rs  alloy_pigeonhole.rs  alloy_ring_election.rs  alloy_toughnut.rs  alloy_toy_filesystem.rs  alloy_toy_lists.rs  alloy_trees.rs  alloy_viktor.rs  bmc_list_check.rs  bmc_list_encoding.rs  bmc_list_repair.rs  bmc_list_synth.md  bmc_list_synth.rs  ceilings_and_floors.rs  csp_blocked_n_queens.rs  csp_graph_coloring.rs  csp_graph_coloring_simple.rs  csp_hamiltonian_cycle.rs  csp_latin_square.rs  csp_magic_series.rs  csp_nqueens.rs  csp_social_golfer.rs  debug_handshake.rs  dijkstra.rs  file_system.rs  graph_coloring.rs  hotel.rs  ring_election.rs  simple.rs  (+37 more)
examples/bmc_list_check/: mod.rs
examples/bmc_list_encoding/: mod.rs
src/: ast.rs  bool.rs  cnf.rs  engine.rs  instance.rs  lib.rs  proof.rs  solver.rs  translator.rs
src/ast/: formula.rs  int_expr.rs  visitor.rs
src/bool/: arena.rs  factory.rs  int.rs  matrix_ops.rs  var_allocator.rs
src/engine/: evaluator.rs  rustsat_adapter.rs  symmetry_breaker.rs  symmetry_detector.rs
src/simplify/: flattener.rs  mod.rs  skolemizer.rs
src/translator/: cache.rs  environment.rs  leaf_interpreter.rs
tests/: pigeonhole.rs  simple.rs  simple_solution.rs  test_boolean_matrix.rs  test_comprehension.rs  test_constant_folding.rs  test_count.rs  test_count_vars.rs  test_enumeration.rs  test_evaluator.rs  test_if_then_else.rs  test_int_expr_operations.rs  test_int_operations.rs  test_minimal.rs  test_proof.rs  test_regressions.rs  test_skolemization.rs  test_symmetry_breaking.rs  test_translator.rs  test_translator_comparison.rs  test_translator_iff.rs  test_translator_multiplicity.rs  test_ucore.rs  test_unsat_core.rs  trivial.rs
