[package]
name = "kodkod-rs"
version = "0.1.0"
edition = "2024"
authors = ["Kodkod-rs contributors"]
license = "MIT"
description = "A Rust port of Kodkod, a relational logic solver"
repository = "https://github.com/yourusername/kodkod-rs"
keywords = ["sat", "solver", "logic", "relational", "alloy"]
categories = ["algorithms", "science"]

[dependencies]
thiserror = "1.0"
# Phase 9: Boolean factory dependencies
typed-arena = "2.0"
rustc-hash = "2.0"
# Phase 10: Translation dependencies
indexmap = "2.0"

[dev-dependencies]
# SAT solver backends (Phase 12) - using pure Rust batsat
rustsat = "0.7"
rustsat-batsat = "0.7"
