[package]
name = "kodkod-rs"
version = "0.1.0"
edition = "2024"
authors = ["Kodkod-rs contributors"]
license = "MIT"
description = "A Rust port of Kodkod, a relational logic solver"
repository = "https://github.com/yourusername/kodkod-rs"
keywords = ["sat", "solver", "logic", "relational", "alloy"]
categories = ["algorithms", "science"]

[dependencies]
thiserror = "1.0"
# Phase 9: Boolean factory dependencies
typed-arena = "2.0"
rustc-hash = "2.0"
# Phase 10: Translation dependencies
indexmap = "2.0"
# SAT solver for production builds
rustsat = "0.7"
rustsat-batsat = "0.7.5"
# Arena allocation for translator
bumpalo = "3.19"
bumpalo-herd = "0.1"
# Fast hashing for HashMaps
ahash = "0.8"
rand = "0.8"

[patch.crates-io]
rustsat = { git = "https://github.com/chrjabs/rustsat", rev = "b8d7978a011d8b5c0c409bcbce0366abf05f997d" }
rustsat-batsat = { git = "https://github.com/chrjabs/rustsat", rev = "b8d7978a011d8b5c0c409bcbce0366abf05f997d" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_benchmarks"
harness = false

[[bench]]
name = "solver_comparison"
harness = false

[profile.release]
debug = true
